Fix dark mode on smaller screens

--- a/themes/jeo-theme/assets/scss/3-layout/_l-header.scss
+++ b/themes/jeo-theme/assets/scss/3-layout/_l-header.scss
@@ -808,6 +808,11 @@ header.site-header {
 
     .wrapper {
         justify-content: center;
+
+        @include mobile {
+            flex-wrap: nowrap;
+            max-width: 100%;
+        }
     }
 
     @include tablet {
